# Magma-Engine

./: .gitignore  .gitmodules  .uncrustify.config  CMakeLists.txt  LICENSE  LICENSE.md  Magma Engine v5.sln  Magma Engine v7.sln  README.md
Magma/: Helper.h  main.cpp
Magma Engine v5/: GLSLCompiler.bat  Helper.h  Magma Engine v5.vcxproj  Magma Engine v5.vcxproj.filters  Magma Engine v7.vcxproj  Magma Engine v7.vcxproj.filters  imgui.ini  main.cpp
Magma Engine v5/Editor/: AssetBrowser.h  AudioEngine.h  Camera.h  Editor.h  EntityManager.h  Helper.h  Inspector.h  SceneManager.h  ScriptEngine.h
Magma Engine v5/Renderer/: Renderer.h
Magma Engine v6/: GLSLCompiler.bat  Magma Engine v6.vcxproj  Magma Engine v6.vcxproj.filters  Md2Loader.h  imgui.ini  main.cpp
Magma Engine v6/Data/: TestScript.lua
Magma Engine v6/Editor/: AssetBrowser.h  Editor.h  Helper.h  Inspector.h  SceneManager.h
Magma Engine v6/Renderer/: Renderer.h
Magma Engine v7/: GLSLCompiler.bat  Helper.h  Magma Engine v7.vcxproj  Magma Engine v7.vcxproj.filters  Md2Loader.h  imgui.ini  main.cpp
Magma Engine v7/Data/: DummyScript.lua  imgui.ini
Magma Engine v7/Editor/: AssetBrowser.h  AudioEngine.h  Editor.h  EditorUI.h  EntityManager.h  Helper.h  Inspector.h  SceneManager.h  ScriptEngine.h
Magma Engine v7/Engine/: CameraPath.h  ECS.h  Engine.h  FpsCamera.h  FrustumCulling.h  ImageCompression.h  Physics.h  Scene.h  ScriptEngine.h
Magma Engine v7/Renderer/: Renderer.h
Magma/Data/: PlayerScript.lua  imgui.ini
Magma/Editor/: AssetBrowser.h  Camera.h  Editor.h  EntityManager.h  Helper.h  (+3 more)
(+233 files in other folders)
